-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 3.0.0-beta
-
None
-
825244224eedd865d19ef1a772dba955d54bcd60
the generic project manager says this when restoring a session and the .creator files disappeared:
Failed opening project '': Project is not a file
this is obviously Not Helpful ™.
| For Gerrit Dashboard: QTCREATORBUG-10703 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 71438,2 | Project: Do not lose project file path information | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |