Project: Do not lose project file path information

... when opening a project that is no longer found on disk.

Task-number: QTCREATORBUG-10703
Change-Id: I5163c85469d354d2cf48959dcae6303c69392b8f
Reviewed-by: Daniel Teske <daniel.teske@digia.com>